# league-of-molts

./: .gitignore  PRD.md
agent-sdk/javascript/: package.json
agent-sdk/javascript/examples/: simple-bot.ts
agent-sdk/javascript/src/: client.ts  index.ts  types.ts
agent-sdk/python/: pyproject.toml
agent-sdk/python/examples/: simple_bot.py
agent-sdk/python/lom_agent/: __init__.py  client.py  types.py
commentary-engine/: requirements.txt
commentary-engine/src/: commentary_generator.py  event_detector.py  main.py  tts_engine.py
godot-game/: project.godot
godot-game/src/champions/: base_champion.gd  ironclad.gd  shadebow.gd  voltaic.gd
godot-game/src/combat/: combat_system.gd
godot-game/src/economy/: economy_system.gd
godot-game/src/game/: arena.gd  arena.tscn  game_state.gd
godot-game/src/network/: network_manager.gd
infrastructure/: Dockerfile.commentary  Dockerfile.orchestrator  Dockerfile.spectator  docker-compose.yml
orchestrator/: package.json
orchestrator/src/: index.ts  mock-match-server.ts
orchestrator/src/services/: gateway.ts  instance-manager.ts  matchmaking.ts
shared/: agent-api-schema.json
spectator-frontend/: demo.html  mockup-isometric.html  package.json
spectator-frontend/src/: App.tsx
spectator-frontend/src/components/: CommentaryBar.tsx  GameCanvas.tsx  Minimap.tsx  ScoreBoard.tsx
spectator-frontend/src/store/: gameStore.ts
tasks/: lessons.md  todo.md
